# ChatGTP_Lab

./: .gitignore
2-1/: pyproject.toml
embedding_intro/: docker-compose.yml  pyproject.toml
embedding_intro/data/: postmaster.pid
embedding_intro/data/base/1/: 1259  2619  2619_vm  2696  pg_internal.init
embedding_intro/data/base/16384/: 1247  1249  1255  1259  1259_fsm  16488  16489  16494  16495  16547  16550  16552  16558  16559  2224  2579  2600  2601  2602  2603  2604  2605  2606  2608  2609  2610  2616  2617  2619  2650  2651  2652  2653  2654  2655  2656  2657  2658  2659  2660  (+32 more)
embedding_intro/data/base/5/: pg_internal.init
embedding_intro/data/global/: 1260  1262  2671  pg_control  pg_internal.init
embedding_intro/data/pg_stat/: pgstat.stat
embedding_intro/data/pg_xact/: 0000
embedding_intro/src/: ada_embedding.py  hf_embedding.py
huggingface_intro/: pyproject.toml
huggingface_intro/src/huggingface_intro/: hf_pipeline.py  intro.py
pgvector_intro/: alembic.ini  pyproject.toml
pgvector_intro/alembic/: env.py  models.py
pgvector_intro/alembic/versions/: 9d3b93b9ca85_created_embeddings_table.py  models.py
pgvector_intro/src/: postgre_vecoter.py
