[project]
name = "2-1"
version = "0.1.0"
description = ""
authors = [
    {name = "JosephTsui",email = "joseph_tsui@systemweb.com.tw"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pendulum (>=3.1.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "2_1", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
