[project]
name = "huggingface-intro"
version = "0.1.0"
description = ""
authors = [
    {name = "JosephTsui",email = "joseph_tsui@systemweb.com.tw"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "transformers (>=4.51.3,<5.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "torchvision (>=0.22.0,<0.23.0)"
]

[tool.poetry]
packages = [{include = "huggingface_intro", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
